# MANA-Core

./: .gitignore  CMakeLists.txt  README.md  build.sh  init.sh  main.cpp
src/: Problem.cpp  Problem.h
src/detection/: GridCD.h
src/planning/mapf/: CBS.cpp  CBS.h  HCCBS.cpp  HCCBS.h  MAPF.h  PBS.cpp  PBS.h
src/planning/path/: AStar.cpp  AStar.h  Dijkstra.h  Pathfinder.h
src/solutions/: Multipath.h
src/solvers/: Centralized.cpp  Centralized.h
src/utils/: CTNode.h  CTSolve.h  DistanceMetrics.h  HierarchicalSolve.h  MotionConstraint.h
tests/: cbs_analysis.cpp  mapf_tests.cpp  path_tests.cpp  utils_tests.cpp
